Test release preparation for 0.1.1

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "solvercaptcha/solvecaptcha-php",
     "type": "library",
-    "description": "PHP package for easy integration with solvecaptcha API",
+    "description": "PHP package for easy integration with solvecaptcha API.",
     "homepage": "https://solvecaptcha.com/",
     "keywords": [
         "solvecaptcha",
